@@ -1,5 +1,7 @@
 2003-11-26  Pavel Roskin  <proski@gnu.org>
 
+	* dialog.c: Eliminate callback macro.
+
 	* dialog.c (dlg_replace_widget): Use dlg_select_widget().
 	(select_a_widget): Rename to select_other_widget(), factorize
 	most code from dlg_one_up() and dlg_one_down().
